# wordbane

./: .gitignore  LICENSE  README.md  _redirects  netlify.toml  serve.py
ai_art_server/: README.md
ai_art_server/wordplay_art/: artwork.py  bake.py  client.py  presets.py  server.py  style_explore.py
ai_art_server/wordplay_art/_generated/: LoRA.py  SamplerType.py  imageService_pb2.py
art/: pyproject.toml
art/wordplay_art/: artwork.py  client.py  gallery.py  presets.json  style_explore.py
art/wordplay_art/_generated/: CompressionMethod.py  Control.py  ControlInputType.py  ControlMode.py  GenerationConfiguration.py  LoRAMode.py  SeedMode.py  imageService_pb2_grpc.py
art/wordplay_art/schema/: config.fbs
docs/: ARCHITECTURE.md
emoji_mapper/: README.md  pyproject.toml
emoji_mapper/data/: emoji_vocab.json
emoji_mapper/wordbane_emoji/: __init__.py  build.py  vocab.py
game/: _shot.gd.uid  _sim.gd.uid  art.gd.uid  balance.gd  balance.gd.uid  combat_text.gd  game_logic.gd  game_logic.gd.uid  ladder.gd  ladder.gd.uid  ladder.tscn  main.gd  main.gd.uid  play.gd  play.gd.uid  pool_gauntlet.gd  pool_gauntlet.gd.uid  pool_gauntlet.tscn  project.godot  selftest.gd  selftest.gd.uid  title.gd  title.gd.uid  title.tscn  word_style.gd  world.gd  world.gd.uid  world.tscn
game/core/: battle.gd  battle.gd.uid  boons.gd  boons.gd.uid  combat_text.gd  combat_text.gd.uid  game_logic.gd  gauntlet.gd  gauntlet.gd.uid  help.gd.uid  icon_bank.gd  icon_bank.gd.uid  json_file.gd  json_file.gd.uid  juice.gd.uid  ladder_battle.gd  ladder_battle.gd.uid  lexicon.gd  lexicon.gd.uid  options_panel.gd  options_panel.gd.uid  pool_battle.gd  pool_battle.gd.uid  rng.gd  rng.gd.uid  rules.gd  rules.gd.uid  settings.gd  ui.gd  ui.gd.uid  word_bank.gd  word_bank.gd.uid  word_ladder.gd  word_ladder.gd.uid  word_style.gd  word_style.gd.uid
game/data/: conformance.json  dictionary.json  icons.json  word_bank.json
godot/: art.gd  art.gd.uid  balance.gd  play.gd  play.gd.uid  pool_gauntlet.gd  pool_gauntlet.gd.uid  selftest.gd  selftest.gd.uid  title.gd.uid
godot/core/: boons.gd.uid  help.gd.uid  icon_bank.gd  icon_bank.gd.uid  lexicon.gd.uid  pool_battle.gd.uid  rng.gd.uid  rules.gd  rules.gd.uid  settings.gd.uid  ui.gd.uid  word_bank.gd.uid
godot_version/: art.gd  balance.gd  balance.gd.uid  play.gd  pool_gauntlet.gd  project.godot  selftest.gd
godot_version/core/: gauntlet.gd  gauntlet.gd.uid  help.gd  icon_bank.gd  juice.gd  options_panel.gd.uid  rules.gd  settings.gd
shared_data/: conformance.json  dictionary.json  icons.json  rules.json  styles.json  word_bank.json  word_emoji.json  word_emoji.manifest.json
tools/: README.md  pyproject.toml
tools/tests/: test_generate.py
tools/wordplay_tools/: __init__.py  dictionary.py  generate.py  lexicon.py  parse.py  tag.py
web/: README.md  package.json
web/src/: boons.js  game.js  gauntlet.js  icons.js  lexicon.js  poolbattle.js  rng.js  rules.js  wordbank.js
web/test/: conformance.js
web_version/: README.md  index.html  manifest.webmanifest  package.json
web_version/src/: boons.js  game.js  gauntlet.js  icons.js  lexicon.js  poolbattle.js  rng.js  rules.js  wordbank.js
web_version/test/: conformance.js  lexicon.js
wordlist_generator/: README.md  pyproject.toml
wordlist_generator/tests/: test_esdb.py  test_generate.py
wordlist_generator/wordplay_tools/: __init__.py  dictionary.py  esdb.py  generate.py  lexicon.py
