[project]
name = "wordplay-tools"
version = "0.1.0"
description = "Build-time NLP tooling for the Wordplay Godot game (word bank + sentence tagging)."
readme = "README.md"
requires-python = ">=3.10"
# spaCy provides the dependency parse used to find each character's owner (the
# grammatical subject). The English model is installed separately, see README:
#   uv run python -m spacy download en_core_web_sm
# spacy: dependency parse to find each character's owner (the grammatical subject).
# nltk: WordNet (part of speech) + SentiWordNet (sentiment) to build the validation
#       dictionary. Both need one-time corpora downloads (see README).
dependencies = ["spacy>=3.7", "nltk>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wordplay-generate = "wordplay_tools.generate:main"
wordplay-dictionary = "wordplay_tools.dictionary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wordplay_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
